--- a/style.css
+++ b/style.css
@@ -383,7 +383,7 @@ main {
 }
 
 .card-bg-learning::before {
-    background-image: url(image/learning.jpg);
+    background-image: url(image/Learning.jpg);
 }
 
 /* Project Stack Section */
@@ -915,3 +915,4 @@ footer p {
     }
 
 }
+
